# E2E-messaging-app

./: .gitignore  Cargo.toml  LICENSE
src/: client.rs  crypto.rs  fallback.rs  main.rs  p2p.rs
