[package]
name = "p2p_sparse_messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16.20"
warp = "0.3" # For server-side HTTP
uuid = "1.3" # Generate unique IDs for messages

